# compile-time-regular-expressions

./: .gitignore  .gitmodules  .tm_properties  .travis.yml  BUILD  CMakeLists.txt  LICENSE  MODULE.bazel  Makefile  Makefile copy  NOTES.md  README.md  bisect.sh  brainfuck.cpp  catch-regexp-example.cpp  check.cpp  clang-bench.txt  code-size-test.cpp  conanfile.py  cpp-20-check.sh  ctre.bzl  ctre.cppm  future.cpp  gcc-bench.txt  gram.txt  math.cpp  meson.build  module-test.cpp  number.cpp  pokus2.cpp  pregexp-grammar.hpp  pregexp.cpp  pregexp.hpp  regexp.cpp  result.cpp  static-decider.hpp  static-parser.hpp  static-stack.hpp  test.cpp  test2.cpp  (+1 more)
.conan/: build.py
.conan/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
.github/workflows/: test.yml  tests.yml
docs/: api.rst  conf.py  examples.rst  index.rst  regex_syntax.rst
include/: ctbf.hpp  ctfa.hpp  ctfmt.hpp  ctll.hpp  ctre  ctre-unicode.hpp  ctre.cppm  ctre.hpp  meson.build  pregexp-grammar.hpp  pregexp.hpp  static-stack.hpp  unicode-db.hpp
include/ctbf/: actions.hpp  brainfuck.gram  brainfuck.hpp  evaluate.hpp  literals.hpp  utility.hpp  wrapper.hpp
include/ctfa/: .gitignore  .tm_properties  Makefile  match.hpp  readme.md  select.hpp  test.cpp
include/ctfa/include/: ctfa.hpp
include/ctfa/include/ctfa/: block.hpp  transformation.hpp  utility.hpp
include/ctfa/include/ctfa/basic/: condition.hpp  debug.hpp  fa.hpp  state.hpp  transition.hpp
include/ctfa/include/ctfa/container/: set.hpp
include/ctfa/include/ctfa/helper/: conditional.hpp  info.hpp  interval.hpp  translator.hpp
include/ctfa/include/ctfa/matcher/: match.hpp
include/ctfa/include/ctfa/transformations/: alternative.hpp  character_set.hpp  concat.hpp  determinize.hpp  epsilon.hpp  minimize.hpp  optional.hpp  plus.hpp  remove_unneeded.hpp  shrink.hpp  star.hpp
include/ctfa/single-header/: ctfa.hpp
include/ctfa/tests/: _basic.cpp  alternation.cpp  concat.cpp  info.cpp  minimize.cpp  optional.cpp  plus.cpp  remove_unneeded.cpp  set.cpp  shrink.cpp  split.cpp  star.cpp  translator.cpp
include/ctfa/tests/disabled/: transformations.cpp
include/ctfa/tests/exec/: _determinize.cpp  _determinize2.cpp  _interval.cpp  _matcher.cpp  determinize.cpp  set.cpp  star.cpp
include/ctfa/tests/exec2/: __test.cpp  _condition.cpp  _determinize.cpp  _set.cpp  aloha.cpp  az.cpp  az_star.cpp  fa.cpp  minimize.cpp  minimize2.cpp  minimize3.cpp  reachability.cpp  search.cpp
include/ctfmt/: actions.hpp  fmt.gram  fmt.hpp  format.hpp  utility.hpp
include/ctll/: actions.hpp  fixed_string.hpp  fixed_string.hpp.orig  grammars.hpp  list.hpp  parser.hpp  traits.hpp  utilities.hpp
include/ctre/: atoms.hpp  atoms_characters.hpp  atoms_unicode.hpp  capture_tuple.hpp  compatibility.hpp  evaluation.hpp  find_captures.hpp  first.hpp  fixed_string.hpp  flags_and_modes.hpp  function.hpp  functions.hpp  functions.hpp.orig  grammar.hpp  has_implicit_anchor.hpp  id.hpp  iterators.hpp  literals.hpp  operators.hpp  ordering.hpp  parser.hpp  pattern_length.hpp  pcre-actions.hpp  pcre.gram  pcre.hpp  pcre2.hpp  pcre_actions.hpp  range.hpp  replace.gram  replace.hpp  return_type.hpp  rotate.hpp  simple.gram  simple.hpp  starts_with_anchor.hpp  std_includes.hpp  std_module.hpp  translate_dfa.hpp  tuple.hpp  type-stack.hpp  (+6 more)
include/ctre/actions/: asserts.inc.hpp  atomic_group.inc.hpp  backreference.inc.hpp  boundaries.inc.hpp  capture.inc.hpp  characters.inc.hpp  class.inc.hpp  fusion.inc.hpp  hexdec.inc.hpp  look.inc.hpp  mode.inc.hpp  named_class.inc.hpp  options.inc.hpp  properties.inc.hpp  repeat.inc.hpp  replace.inc.hpp  sequence.inc.hpp  set.inc.hpp
include/ctre/optimizer/: first.hpp
include/static-regexp/: static-regexp.hpp
include/unicode-db/: unicode-db.hpp  unicode.hpp  unicode_interface.hpp
packaging/: CPackDefaults.cmake.in
single-header/: ctre-unicode.hpp  ctre.hpp  unicode-db.hpp
static-regexp/: static-regexp.hpp  string.hpp
tests/: CMakeLists.txt  __utf8.cpp  _bad_cycle.cpp  _dfa.cpp  _fixed-string.cpp  _infinite-cycle.cpp  _unicode.cpp  api.cpp  bad_cycle.cpp  basic-fa.cpp  brainfuck.cpp  ci.cpp  cnttp.cpp  correct-conversion.cpp  ctll.cpp  dfa.cpp  fmt.cpp  gcc8.cpp  generating.cpp  gets.cpp  is_prime.cpp  many-of-different.cpp  many-of-same-proto.cpp  matching.cpp  matching2-msvc-greedy.cpp  matching2.cpp  matching3.cpp  mode.cpp  msvc.cpp  parsing.cpp  partial_match.cpp  range.cpp  results.cpp  simple.cpp  string.cpp  trampoline.cpp  wide-pattern.cpp  z_matching.cpp
tests/benchmark/: many-of-different-ctll.cpp  many-of-different-x5-ctll.cpp  many-of-different-x5-proto.cpp  many-of-same-ctll.cpp  many-of-same-proto.cpp  same.cpp  unique.cpp
tests/benchmark-exec/: .gitignore  .tm_properties  Makefile  baseline.cpp  boost.cpp  common.hpp  ctfa-data.cpp  ctfa-table.cpp  ctfa.cpp  ctre.cpp  ctre2.cpp  jsc.js  node-v8.js  pattern.hpp  pcre-jit.cpp  pcre.cpp  re2.cpp  srell.cpp  std.cpp  xpressive-ct.cpp  xpressive.cpp
tests/benchmark-range/: load-file.hpp  measurement.cpp
