inc = include_directories('.')

hdrs = files(
  'ctll.hpp',
  'ctll/actions.hpp',
  'ctll/fixed_string.hpp',
  'ctll/grammars.hpp',
  'ctll/list.hpp',
  'ctll/parser.hpp',
  'ctll/utilities.hpp',
  'ctre-unicode.hpp',
  'ctre.hpp',
  'ctre/actions/asserts.inc.hpp',
  'ctre/actions/atomic_group.inc.hpp',
  'ctre/actions/backreference.inc.hpp',
  'ctre/actions/boundaries.inc.hpp',
  'ctre/actions/capture.inc.hpp',
  'ctre/actions/characters.inc.hpp',
  'ctre/actions/class.inc.hpp',
  'ctre/actions/fusion.inc.hpp',
  'ctre/actions/hexdec.inc.hpp',
  'ctre/actions/look.inc.hpp',
  'ctre/actions/mode.inc.hpp',
  'ctre/actions/named_class.inc.hpp',
  'ctre/actions/options.inc.hpp',
  'ctre/actions/properties.inc.hpp',
  'ctre/actions/repeat.inc.hpp',
  'ctre/actions/sequence.inc.hpp',
  'ctre/actions/set.inc.hpp',
  'ctre/atoms.hpp',
  'ctre/atoms_characters.hpp',
  'ctre/atoms_unicode.hpp',
  'ctre/evaluation.hpp',
  'ctre/find_captures.hpp',
  'ctre/first.hpp',
  'ctre/flags_and_modes.hpp',
  'ctre/functions.hpp',
  'ctre/id.hpp',
  'ctre/iterators.hpp',
  'ctre/literals.hpp',
  'ctre/operators.hpp',
  'ctre/pcre.hpp',
  'ctre/pcre_actions.hpp',
  'ctre/range.hpp',
  'ctre/return_type.hpp',
  'ctre/rotate.hpp',
  'ctre/starts_with_anchor.hpp',
  'ctre/utf8.hpp',
  'ctre/utility.hpp',
  'ctre/wrapper.hpp',
  'unicode-db.hpp',
  'unicode-db/unicode-db.hpp',
  'unicode-db/unicode_interface.hpp',
)

install_headers(
  hdrs,
  preserve_path: true,
)
